NATTQA-ENV/force-app/main/default/objects/NATT_Core_Return_Location__c/NATT_Core_Return_Location__c.object-meta.xml
<CustomObject>
    <description>Data related to a Core Return Location</description>
    <label>Core Return Location</label>
    <nameField>
        <label>Core Return Location Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Core Return Locations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>