NATTQA-ENV/force-app/main/default/objects/NATT_Core_Return_Location__c/fields/NAOCAP_Additional_Comments__c.field-meta.xml
<CustomField>
    <fullName>NAOCAP_Additional_Comments__c</fullName>
    <label>NAOCAP Additional Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>