NATTQA-ENV/force-app/main/default/objects/NATT_Core_Return_Location__c/fields/NAOCAP_Address_Line_2__c.field-meta.xml
<CustomField>
    <fullName>NAOCAP_Address_Line_2__c</fullName>
    <label>NAOCAP Address Line 2</label>
    <length>255</length>
    <type>Text</type>
</CustomField>