NATTQA-ENV/force-app/main/default/objects/NATT_Core_Return_Location__c/fields/NATT_Core_Return_Location_City__c.field-meta.xml
<CustomField>
    <fullName>NATT_Core_Return_Location_City__c</fullName>
    <label>City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>