NATTQA-ENV/force-app/main/default/objects/NATT_Core_Return_Location__c/fields/NATT_Core_Return_Location_Contact__c.field-meta.xml
<CustomField>
    <fullName>NATT_Core_Return_Location_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Core Return Location Contact</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Core_Return_Locations</relationshipName>
    <type>Lookup</type>
</CustomField>