NATTQA-ENV/force-app/main/default/objects/NATT_Core_Return_Location__c/fields/NATT_Core_Return_Location_State_Province__c.field-meta.xml
<CustomField>
    <fullName>NATT_Core_Return_Location_State_Province__c</fullName>
    <label>State/Province</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NATT_State_Picklist</valueSetName>
    </valueSet>
</CustomField>