NATTQA-ENV/force-app/main/default/objects/NATT_Core_Return_Location__c/fields/NATT_Core_Return_Location_Street__c.field-meta.xml
<CustomField>
    <fullName>NATT_Core_Return_Location_Street__c</fullName>
    <label>Street</label>
    <length>120</length>
    <type>Text</type>
</CustomField>