NATTQA-ENV/force-app/main/default/objects/NATT_Core_Return_Location__c/fields/NATT_Zip_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>NATT_Zip_Postal_Code__c</fullName>
    <label>Zip/Postal Code</label>
    <length>12</length>
    <type>Text</type>
</CustomField>